...
                                            }label: {
                                                Label("Edytuj", systemImage: "square.and.pencil")
                                            }.tint(.blue)
                                        }.sheet(isPresented: $INRPresented){
                                            VStack{
                                                Text("Podaj pomiar").multilineTextAlignment(.center).font(.title).foregroundColor(.cyan)
                                                TextField("0.00", text: $viewModel.INRText).textFieldStyle(TFNumberStyle())
                                                Text(viewModel.conformINRPrompt).foregroundColor(.red)
                                                Button{
                                                    updateINR(inr: i)
                                                    viewModel.INRText = ""
                                                    INRPresented.toggle()
                                                } label: {
                                                    Text("Zapisz").frame(maxWidth: .infinity)
                                                }.disabled(!viewModel.isINRValid).buttonStyle(.borderedProminent)
                                                Button{
                                                    viewModel.pobierzPomiarINR()
                                                    INRPresented.toggle()
                                                } label: {
                                                    Text("Anuluj").frame(maxWidth: .infinity)
...
                                Text("Gotowe").frame(maxWidth: .infinity)
                            }.buttonStyle(.borderedProminent)
                        }
                        
                        if !AuthViewModel.PreviewMode{
                            if(calendar.isDateInToday(viewModel.pomiarINR.date) && viewModel.pomiarINR.value > 0.01){
                                Text("Dzisiejszy pomiar wynosi: \(viewModel.pomiarINR.value, specifier: "%.2f")").accessibilityIdentifier("todaysMeasurement")
                                Button("Zmień pomiar INR"){INRPresented.toggle()}
                                    .buttonStyle(.bordered)
                                    .sheet(isPresented: $INRPresented){
                                        VStack{
                                            Text("Wpisz wynik pomiaru").multilineTextAlignment(.center).font(.title).foregroundColor(.cyan)
                                            TextField("0.00", text: $viewModel.INRText).textFieldStyle(TFNumberStyle())
...
                                            Button{INRPresented.toggle()} label: {
                                                Text("Anuluj").frame(maxWidth: .infinity)
                                            }.buttonStyle(.borderedProminent).tint(.red).padding(.bottom, 20)
                                        }.padding()
                                    }
                            }else{
                                Button("Dodaj pomiar INR"){INRPresented.toggle()}
                                    .buttonStyle(.borderedProminent)
                                    .sheet(isPresented: $INRPresented){
                                        VStack{
                                            Text("Wpisz wynik pomiaru").multilineTextAlignment(.center).font(.title).foregroundColor(.cyan)
                                            TextField("0.00", text: $viewModel.INRText).textFieldStyle(TFNumberStyle())
                                            Text(viewModel.conformINRPrompt).foregroundColor(.red)
...
